Complete assignment
